se agrega posicion a fixed para que siempre esten visibles

--- a/src/style/components/_Header.scss
+++ b/src/style/components/_Header.scss
@@ -1,4 +1,5 @@
 .headerContainer {
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
